<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Authenticator 2FA </string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="open_setting">Open setting</string>
    <string name="please_grant_all_permissions_to_access_additional_functionality">Please grant all permissions to process the features</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="delete">Delete</string>
    <string name="languagetxt">Choose language</string>
    <string name="change">Change</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this?</string>
    <string name="content_delete_this_file">Are you sure to delete this file?</string>
    <string name="title_home">Home</string>
    <string name="recordings">Recordings</string>
    <string name="start_recording">Start Recording</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="welcome_back">Welcome back</string>
    <string name="loading_language">Loading language</string>
    <string name="loading_ads">Loading ads</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="select">Select</string>
    <string name="new_category">New Category</string>
    <string name="done">Done</string>
    <string name="apply">Apply</string>
    <string name="deleted">Deleted</string>
    <string name="stay_online_nfor_a_better_experience">\"Stay Online \nfor a Better Experience!\"</string>
    <string name="connect">Connect</string>
    <string name="open_settings">Open settings</string>
    <string name="stop">Stop</string>
    <string name="play_recorded">Play Recorded</string>
    <string name="play_reverse">Play Reverse</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="pitch_shift">Pitch Shift</string>
    <string name="loop_playback">Loop Playback</string>
    <string name="share_app">Share app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="term_of_use">Term of use</string>
    <string name="are_you_sure_you_want_to_delete_this_audio">Are you sure you want to delete this audio?</string>
    <string name="let_s_create_your_audio">Let’s create your new audio</string>
    <string name="nothing_here_yet">Nothing here yet!</string>
    <string name="needs_access_nto_camera_amp_microphone"><![CDATA[Needs access \nto camera & microphone]]></string>
    <string name="des_denied_camera">To start using the effect, please turn on access your camera and microphone</string>
    <string name="check_connection_settings_and_try_again">Check connection settings and try again</string>
    <string name="internet_connection_was_restored">Internet connection was restored</string>
    <string name="ooops">Ooops!</string>
    <string name="des_no_internet_dialog">No internet connection found\\nCheck your connection</string>
    <string name="try_again">Try Again</string>
    <string name="initing_filter">Initializing Filter</string>
    <string name="des_try_this">You have 15 seconds to show your musical talent, our judges will score you</string>
    <string name="downloading">Downloading...</string>
    <string name="des_exit_dialog">Your video will not be saved. \nAre you sure?</string>
    <string name="continue_txt">Continue</string>
    <string name="let_start">Okay, Let’s Start!</string>
    <string name="notifications">Notifications</string>
    <string name="microphone">Microphone</string>
    <string name="preview">Preview</string>
    <string name="saved">Saved</string>
    <string name="the_video_has_been_saved_to_my_file">The video has been saved to tab “Recording->Video”.</string>
    <string name="camera">Camera</string>
    <string name="des_remove_video">This video will be removed from your library.</string>
    <string name="delete_this_video">Delete this video</string>
    <string name="app_name_full" translatable="false">Aegis Authenticator</string>
    <string name="org_name_full" translatable="false">Beem Development</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_edit_icon">Edit icon</string>
    <string name="action_reset_usage_count">Reset usage count</string>
    <string name="action_reset_usage_count_dialog">Are you sure you want to set the usage count of this entry to 0?</string>
    <string name="action_default_icon">Restore default icon</string>
    <string name="discard">Discard</string>
    <string name="all">All</string>
    <string name="issuer">Issuer</string>
    <string name="yandex_pin">PIN (4–16 digits)</string>
    <string name="motp_pin">PIN (4 digits)</string>
    <string name="suggested">Suggested</string>
    <string name="usage_count">Usage count</string>
    <string name="warning">Warning</string>
    <string name="pref_cat_appearance_app">App</string>
    <string name="pref_cat_appearance_entries">Entries</string>
    <string name="pref_cat_backups_android">Android</string>
    <string name="pref_cat_backups_auto">Automatic backups</string>
    <string name="pref_section_behavior_title">Behavior</string>
    <string name="pref_section_behavior_summary">Customize the behavior when interacting with the entry list.</string>
    <string name="pref_section_appearance_title">Appearance</string>
    <string name="pref_section_appearance_summary">Adjust the theme, language and other settings that affect the appearance of the app.</string>
    <string name="pref_section_security_title">Security</string>
    <string name="pref_section_security_summary">Configure encryption, biometric unlock, auto lock and other security settings.</string>
    <string name="pref_section_import_export_title">Import &amp; Export</string>
    <string name="pref_section_import_export_summary">Import backups of Aegis or other authenticator apps. Create manual exports of your Aegis vault.</string>
    <string name="pref_section_audit_log_title">Audit log</string>
    <string name="pref_section_audit_log_summary">Find a list of all reported important events that happened within the app.</string>
    <string name="pref_section_backups_title">Backups</string>
    <string name="pref_section_backups_summary">Set up automatic backups to a location of your choosing or enable participation in Android\'s cloud backup system.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="pref_section_icon_packs_summary">Manage and import icon packs</string>
    <string name="pref_select_theme_title">Theme</string>
    <string name="pref_dynamic_colors_title">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">Apply an overlay based on the colors of your Android theme</string>
    <string name="pref_view_mode_title">View mode</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_show_icons_title">Show icons</string>
    <string name="pref_show_icons_summary">Display icons next to each entry</string>
    <string name="pref_code_group_size_title">Code digit grouping</string>
    <string name="pref_code_group_size_summary">Select number of digits to group codes by</string>
    <string name="pref_account_name_position_title">Show the account name</string>
    <string name="pref_show_next_code_title">Show next code</string>
    <string name="pref_show_next_code_summary">Generate and show the next code ahead of time</string>
    <string name="pref_expiration_state_title">Indicate when codes are about to expire</string>
    <string name="pref_expiration_state_summary">Change the color of the codes and have them blink when they are about to expire</string>
    <string name="pref_expiration_state_fallback">Change the color of the codes when they are about to expire</string>
    <string name="pref_shared_issuer_account_name_title">Only show account name when necessary</string>
    <string name="pref_shared_issuer_account_name_summary">Only show account names whenever they share the same issuer. Other account names will be hidden.</string>
    <string name="pref_account_name_position_summary_override">This setting is overridden by the tiles view mode. Account name will be shown below the issuer.</string>
    <string name="pref_import_file_title">Import from file</string>
    <string name="pref_import_file_summary">Import tokens from a file</string>
    <string name="pref_android_backups_title">Android cloud backups</string>
    <string name="pref_android_backups_summary">Allow Android\'s cloud backup system to include Aegis\' vault in its backups. This is only supported for encrypted vaults.</string>
    <string name="pref_android_backups_hint"><i>Device-to-device (D2D) backups are always allowed, regardless of the setting above</i></string>
    <string name="pref_backups_title">Automatically back up the vault</string>
    <string name="pref_backups_summary">Automatically create backups of the vault on external storage when changes are made. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_reminder_title">Backup reminder</string>
    <string name="pref_backups_reminder_summary">Show a reminder to backup your vault in case you haven\'t backed up your latest changes.</string>
    <string name="pref_backups_reminder_dialog_title">Disable backup reminder</string>
    <string name="pref_backups_reminder_dialog_summary">Disabling this reminder means Aegis won\'t tell you whether or not you have changes that are not backed up yet. This puts you at risk of losing access to your tokens. Are you sure you want to disable the reminder?</string>
    <string name="pref_backups_versioning_strategy_title">Backup strategy</string>
    <string name="pref_backups_versioning_strategy_keep_x_versions">Keep a number of versions</string>
    <string name="pref_backups_versioning_strategy_single_backup">Single backup</string>
    <string name="pref_backups_versioning_strategy_single_backup_warning">The selected backup strategy is not reliable and not recommended. A single backup failure could lead to losing your only backup.</string>
    <string name="pref_backups_versioning_strategy_dialog_title">Select a backup strategy</string>
    <string name="pref_backups_location_title">Backup location</string>
    <string name="pref_backups_location_summary">Backups will be stored at</string>
    <string name="pref_backup_location_summary">Backup will be stored at</string>
    <string name="pref_backups_trigger_title">Trigger backup</string>
    <string name="pref_backups_trigger_summary">Manually trigger a backup</string>
    <string name="pref_backups_versions_title">Number of versions to keep</string>
    <string name="pref_backups_versions_infinite">\u221E</string>
    <plurals name="pref_backups_versions_summary">
        <item quantity="one">Keep %1$d version of the backup</item>
        <item quantity="other">Keep %1$d versions of the backup</item>
    </plurals>
    <string name="pref_backups_versions_infinite_summary">Keep an infinite number of versions of the backup</string>
    <string name="pref_import_app_title">Import from app</string>
    <string name="pref_import_app_summary">Import tokens from an app (requires root access)</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export the vault</string>
    <string name="pref_password_reminder_title">Password reminder</string>
</resources>