<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llConfirmParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        tools:background="@color/black_text">

        <carbon.widget.ConstraintLayout
            android:id="@+id/clOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/white"
            android:minWidth="326dp"
            android:orientation="vertical"
            app:carbon_cornerRadius="@dimen/_16sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/pp_600"
                    android:text="@string/delete"
                    android:textColor="#32355D"
                    android:textSize="@dimen/_20ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:fontFamily="@font/pp_600"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/are_you_sure_you_want_to_delete_this"
                    android:textColor="#999999"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_18sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <carbon.widget.TextView
                        android:id="@+id/tvCancel"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:layout_weight="1"
                        android:background="#F5F5F5"
                        android:fontFamily="@font/pp_500"
                        android:foreground="?android:selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/black_neutral_text"
                        android:textSize="@dimen/_13ssp"
                        app:carbon_cornerRadius="@dimen/_18sdp"/>

                    <carbon.widget.TextView
                        android:id="@+id/tvDiscard"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_weight="1"
                        android:background="#EE0000"
                        android:fontFamily="@font/pp_500"
                        android:foreground="?android:selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/delete"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        app:carbon_cornerRadius="@dimen/_18sdp"
                        app:carbon_stroke="#FFAFD1"
                        app:carbon_strokeWidth="@dimen/_1sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </carbon.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>